# Lexintel

./: .env.example  .gitignore  Justfile  README.md  claude.md  docker-compose.yml  migrate.sh  package.json  pyproject.toml
apps/backend/: .env.example  Dockerfile  conftest.py  migrate_file_path_to_blob_url.py  requirements.txt
apps/workers/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/workers/src/: __main__.py  celery_app.py  config.py
apps/workers/src/lib/: __init__.py  progress.py  redis.py
apps/workers/src/workers/: __init__.py  document_extraction.py
apps/workers/tests/: conftest.py
apps/workers/tests/integration/: test_extraction_workflow.py
apps/workers/tests/unit/: test_document_extraction.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  database.py  main.py
backend/app/api/: cases.py  documents.py
backend/app/models/: __init__.py  base.py  document.py
backend/app/schemas/: case.py  chat.py
backend/app/services/: extraction.py  storage.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py
backend/tests/unit/: test_extraction.py
docs/: ARCHITECTURE.md  BACKEND.md  DATABASE.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  PROGRESS_ARCHITECTURE.md  PROGRESS_COMPARISON_MATRIX.md  PROGRESS_IMPLEMENTATION_GUIDE.md  PROGRESS_TRACKING_INDEX.md  REAL_TIME_PROGRESS_ANALYSIS.md  REFACTORING_SUMMARY.md  SETUP.md  TEST_RESULTS.md  WORKERS.md
docs/plans/: 2026-01-03-lex-intel-mvp-backend-rag-first.md  2026-01-03-lex-intel-mvp-backend.md  2026-01-03-monorepo-refactoring.md  (+6 more)
(+30 files in other folders)
