[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-intel-workers"
version = "0.1.0"
description = "Celery workers for document processing"
requires-python = ">=3.9"
dependencies = [
    "celery[redis]>=5.3",
    "lex-intel-shared @ file://../packages/shared",
    "sqlalchemy[asyncio]>=2.0",
    "redis>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
